# RustExperiment

./: Cargo.toml
main/: Cargo.toml
main/src/: _std.rs  main.rs
main/src/_std/: cell_refcell.rs
mimic_commands/: Cargo.toml  README.md
official_async/: Cargo.toml  README.md
official_async/src/: _1_getting_started.rs  _3_async_await.rs  lib.rs
officialbook/: Cargo.toml
officialbook/src/: _07_package_crate_module.rs  _10.rs  _13_functional_programming.rs  _15_functional_programming.rs  _15_smart_pointer.rs  _16_concurrency.rs  _20_web_server.rs  _7.rs  _7_dir.rs  _7_package_crate_module.rs  lib.rs
officialbook/src/_15_functional_programming/: _1_closure.rs  _2_iterator.rs
officialbook/src/_15_smart_pointer/: _1_box.rs  _3_drop.rs  _4_rc.rs  _5_ref_cell.rs  _6_ref_cycle.rs
officialbook/src/_16_concurrency/: _1_thread.rs  _2_channel.rs  _3_mutex.rs  _4_sync_send_trait.rs
officialbook/src/_20_web_server/: server.rs  thread_pool.rs
officialbook/src/_7_dir/: code_in_dir.rs
regular_commands/: Cargo.toml
rusty-mikan/: Cargo.toml
rusty-mikan/src/: queue.rs
src/: main.rs  officialbook.rs
src/officialbook/: _7.rs
thebook/: Cargo.toml
thebook/src/: _10_generic_type_traits_lifetimes.rs  _19_advanced_features.rs  lib.rs
thebook/src/_13_functional_programming/: _1_closure.rs
thebook/src/_15_smart_pointer/: _2_deref.rs  _4_rc.rs  _5_ref_cell.rs  _6_ref_cycle.rs
thebook/src/_16_concurrency/: _1_thread.rs  _2_channel.rs  _3_mutex.rs
thebook/src/_19_advanced_features/: _01_unsafe.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+1 files in other folders)
