[package]
name = "main"
version = "0.1.0"
authors = ["Haruyoshi Toyama <duane0728@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
officialbook = {path = "../officialbook", version = "0.1.0"}
utils = {path = "../utils", version = "0.1.0"}
