[package]
name = "official_async"
version = "0.1.0"
authors = ["Haruyoshi Toyama <duane0728@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
utils = {path = "../utils", version = "0.1.0"}

